# MetaXScaler_Hackathon

./: .gitignore  BLOG.md  Dockerfile  README.md  app.py  demo.py  final_check.py  generate_100_snippets.py  generate_t8_t15_snippets.py  health_check.py  inference.py  main.py  new_baseline.txt  openenv.yaml  patch_and_check.py  pyproject.toml  requirements.txt  tests_phase2.py  upload_hf.py  validate_step7.py  verify_all.py
codereview-env/: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
codereview-env/env/: __init__.py  environment.py  models.py
codereview-env/env/data/: snippets.json
env/: environment.py  graders.py  models.py  pr_environment.py  pr_graders.py  tasks.py
env/data/: prs.json  snippets.json
server/: app.py
training/: colab_notebook.ipynb  train_grpo.py
