[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codereview-env"
version = "1.0.0"
description = "RL environment for AI code review"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.14.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:start"
